# Tsukurimashou

./: .gitignore  COPYING  Makefile.am  PKGBUILD.in  README  README.en  README.jp  configure.ac
beikaitoru/: Makefile.am  beikaitoru.tex  configure.ac  merge.pe  nelson  subfont.mp
beikaitoru/pe/: merge.pe  otf-100.pe  otf-150.pe  otf-200.pe  otf-300.pe  otf-400.pe  otf-500.pe  otf-600.pe
doc/: bkstyle.tex  demo.tex  jamotest.tex  proofs.tex  shelf.tex  usermanual.tex
fontanvil/: .checked_out  AUTHORS  INSTALL  Makefile.am  README  configure.ac
fontanvil/Unicode/: ArabicForms.c  char.c  combiners.h  dump.c  gwwiconv.c  makebuildtables.c  makeutype.c  memory.c  ucharmap.c  unialt.c  usprintf.c  ustring.c  utype.c
fontanvil/Unicode/charset/: MacSymbol.c  ZapfDingbats.c  alphabet.c  big5.c  big5hkscs.c  gb2312.c  gen-charset.pl  iso_8859_1.c  iso_8859_10.c  iso_8859_11.c  iso_8859_13.c  iso_8859_14.c  iso_8859_15.c  iso_8859_2.c  iso_8859_3.c  iso_8859_4.c  iso_8859_5.c  iso_8859_6.c  iso_8859_7.c  iso_8859_8.c  iso_8859_9.c  jis.c  jis201.c  johab.c  koi8_r.c  ksc5601.c  mac.c  win.c
fontanvil/contrib/cidmap/src/: mapcns1.c  mapgb1.c  mapjapan1.c  mapjapan2.c  mapkorean.c
fontanvil/contrib/fonttools/: README-ttf2eps  dewoff.c  findtable.c  pcl2ttf.c  pfadecrypt.c  rmligamarks.c  showttf.c  stripttc.c  ttf2eps.c  woff.c
fontanvil/doc/: building.tex  datamodel.tex  fontanvil.1.in  fontanvil.tex  intro.tex  language.tex  reference.tex  running.tex
fontanvil/fontanvil/: GNUmakefile.in  PfEd.h  SFMT.c  acorn2sfd.c  activeinui.c  afile.c  afile.h  asmfpst.c  autohint.c  autosave.c  autotrace.c  autowidth.c  autowidth.h  autowidth2.c  autowidth2.h  baseviews.h  bezctx_ff.c  bezctx_ff.h  bitmapchar.c  bitmapcontrol.c  bitmapcontrol.h  bvedit.c  charview_private.h  clipnoui.c  collabclient.c  collabclient.h  collabclientpriv.h  configure-fontanvil.h  crctab.c  cvexport.c  cvimages.c  cvruler.h  cvundoes.c  delta.h  dumpbdf.c  dumppfa.c  edgelist.h  edgelist2.h  effects.c  encoding.c  (+134 more)
fontanvil/gutils/: dlist.c  fsys.c  gcol.c  gimage.c  gimagebmpP.h  gimageread.c  gimagereadbmp.c  gimagereadgif.c  gimagereadjpeg.c  gimagereadpng.c  gimagereadras.c  gimagereadrgb.c  gimagereadtiff.c  gimagereadxbm.c  gimagereadxpm.c  gimagewritebmp.c  gimagewritegimage.c  gimagewritejpeg.c  gimagewritepng.c  gimagewritexbm.c  gimagewritexpm.c  gioP.h  giofile.c  gioftpP.h  giofuncP.h  giohosts.c  giomime.c  giothread.c  giotrans.c  gnetwork.c  gutils.c  gwwintl.c  prefs.c  prefs.h  unicodelibinfo.c
fontanvil/inc/: PfEd.h  afile.h  autowidth.h  autowidth2.h  baseviews.h  basics.h  bezctx_ff.h  bitmapcontrol.h  chardata.h  charset.h  charview_private.h  configure-fontanvil.h  cvruler.h  delta.h  dlist.h  dynamic.h  edgelist.h  edgelist2.h  encoding.h  fffreetype.h  ffglib.h  fileutil.h  flaglist.h  fontanvil.h  fontanvilvw.h  fvmetrics.h  gb12345.h  gdraw.h  gfile.h  ggadget.h  gimage.h  gio.h  gnetwork.h  gresource.h  gwidget.h  gwwiconv.h  intl.h  is_LIGATURE.h  libffstamp.h  lookups.h  (+26 more)
fontanvil/m4/: tsu_colourise.m4  tsu_table_line.m4
fontanvil/old-tests/: randomtest.c
fontanvil/test/: arithmetic.pe  autotrace.pe  coverage.pl  doccov.pl  feamerge.pe  floatuse.pl  helper107.pe  ocrblue.pe  rmo-loop2.sh  test001.pe  test002.pe  test003.pe  test004.pe  test005.pe  test006.pe  test007.pe  test008.pe  test009.pe  test010.pe  test101.pe  test102.pe  test103.pe  test104.pe  test105.pe  test106.pe  test107.pe  test108.pe  test109.pe  test110.pe  test111.pe  test112.pe  test113.pe  test114.pe  test115.pe  test116.pe  test117.pe  test118.pe  test119.pe  test120.pe  test121.pe  (+7 more)
fontanvil/test/fonts/: BrushScriptX-Italic.tfm  msk-ocra10.pfb
fontanvil/tests/: README  arithmetic.pe  coverage.pl  feamerge.pe  feart.pl  helper107.pe.in  helper118A.pe  helper118A.pe.in  helper118B.pe  helper118B.pe.in  link_test.c  randomtest.c  runtests  svg2ttf.pe.in  test001.pe  test001.pe.in  test002.pe  test002.pe.in  test003.pe  test003.pe.in  test004.pe  test004.pe.in  test005.pe  test005.pe.in  test006.pe  test006.pe.in  test007.pe  test007.pe.in  test008.pe  test008.pe.in  test009.pe  test009.pe.in  test010.pe  test010.pe.in  test101.pe.in  test102.pe  test102.pe.in  test103.pe.in  test104.pe  test104.pe.in  (+47 more)
fontanvil/tools/: cflow.rc  deadcode  dlunicode
fsc/: afrc.fsc  bll.fsc  dotless.fsc  hangul.fsc  jieub.fsc  kanapc.fsc  kazoe.fsc  latinpc.fsc  mande.fsc  misc.fsc  monospace.fsc  ss01.fsc  ss02.fsc  tsuita.fsc  tsuku.fsc
genjimon/: Makefile  Makefile.am  configure.ac  genjimon-black.mp  genjimon-medium.mp  genjimon-reverse.mp  genjimon-white.mp  genjimon.mp  genjimon.tex  makettf.pe
hamlog/: ecl-ham.ecl  gp-ham.pl  hamlog  select.hl  swi-ham.pl
icemap/: Makefile.am  arrays.c  arrows.c  cascade.c  check-coverage  config.h  configure.ac  construct.c  context.c  encode.c  fileout.c  icemap.c  icemap.h  icemap.tex  inttest.c  nodes.c  parser.c  remap.c  rxparse.c
icemap/test/: basicarray  big5  bigger5  help  remap
idsgrep/: INSTALL  Makefile.am  PKGBUILD.in  assoc.c  bitvec.c  check-coverage  chise2eids  cjkvi-ids.txt  cjkvi2eids  config.tex.in  configure.ac  cook.c  ed22eids  hash.c  idsgrep.1.in  idsgrep.bib  idsgrep.c  idsgrep.h  idsgrep.tex  match.c  parse.c  regex.c  unilist.c  userpred.c  widthtab.im
idsgrep/m4/: tsu_bad_paths.m4  tsu_c_anon_union_struct.m4  tsu_check_xelatex_font.m4
idsgrep/test/: backslash  basicmatch  cooked  demorgan  gcov  genbv  kvg-grone  messages  parsedict  regex  tsu-grone  unilist  userpred  utf8
kerner/: kerner.c
kleknev/: Makefile.am  configure.ac  kleknev-argo.c  kleknev.1  kleknev.c  kleknev.h  knreport  wrapper.c
m4/: ax_am_jobserver.m4  tsu_colourise.m4
mitsuba/: mitsuba.cls  test.tex
mp/: accent.mp  bcircle.mp  bkencl.mp  bll-co.mp  bll-f5c.mp  bll.mp  bottomrad.mp  buildkanji.mp  dakuten.mp  enclosed.mp  fntbase.mp  frac-intro.mp  genjimon.mp  gradeeight.mp  gradefive.mp  gradefour.mp  gradenine.mp  gradeone.mp  gradesix.mp  gradeten.mp  gradethree.mp  gradetwo.mp  hangul.mp  hglextb.mp  hglpage.mp  hiragana.mp  iching.mp  intro.mp  (+165 more)
(+67 files in other folders)
